--- a/app-of-apps.yaml
+++ b/app-of-apps.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: God's-app
+  name: gods-app
   namespace: argocd-system
   finalizers:
     - resources-finalizer.argocd.argoproj.io
